# blatt-2-maze

./: .codecov.yml  .gitignore  .travis.yml  AlgoDat2_Aufteilung.txt  CMakeLists.txt  Doxyfile  README.md  documentation.sh  ifMasterGenerateDocumentation.sh
doxygen_doc/html/: _breadth_first_search_8cpp.html  _breadth_first_search_8h.html  _breadth_first_search_8h_source.html  _breadth_first_search_gui_interaction_8cpp.html  _breadth_first_search_gui_interaction_8h.html  _breadth_first_search_gui_interaction_8h_source.html  _breadth_first_search_lib_8cpp.html  _breadth_first_search_lib_8h.html  _breadth_first_search_lib_8h_source.html  _position_8cpp.html  _position_8h.html  _position_8h_source.html  annotated.html  class_breadth_first_search-members.html  class_breadth_first_search.html  class_breadth_first_search_gui_interaction-members.html  class_breadth_first_search_gui_interaction.html  class_breadth_first_search_lib-members.html  class_breadth_first_search_lib.html  class_maze-members.html  class_maze.html  class_maze_generator-members.html  class_maze_generator.html  class_maze_gui-members.html  class_maze_gui.html  class_maze_solve_algorithm-members.html  class_maze_solve_algorithm.html  class_position-members.html  class_position.html  class_recursive_maze_solve_algorithm-members.html  class_recursive_maze_solve_algorithm.html  classes.html  dir_056ea06dd28d12bd8f6358c0671bfb80.html  dir_07d1b3e9ec8ee28266699e84edec589b.html  dir_1fa8660535a7ad54eb7f4040f8c8b6de.html  dir_2f34abe2316b85e5a6c6831bb84bdce9.html  dir_30e96c78cf793158ee2c4345770fc706.html  dir_418f62d4c6a921a2fda9ed52e926db4b.html  dir_7881a737c94b99294496df167cb4b872.html  dir_7a1f0a4306c1d8febe4e12361667dcc4.html  (+30 more)
doxygen_doc/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  classes_0.js  classes_1.js  classes_3.js  enums_0.js  enumvalues_1.js  enumvalues_2.js  files_0.js  files_1.js  files_3.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  search.js  variables_0.js
doxygen_doc/latex/: _breadth_first_search_8cpp.tex  _breadth_first_search_8h.tex  _breadth_first_search_gui_interaction_8cpp.tex  _breadth_first_search_gui_interaction_8h.tex  _breadth_first_search_lib_8cpp.tex  _breadth_first_search_lib_8h.tex  _position_8cpp.tex  _position_8h.tex  annotated.tex  class_breadth_first_search.eps  class_breadth_first_search.tex  class_breadth_first_search_gui_interaction.eps  class_breadth_first_search_gui_interaction.tex  class_breadth_first_search_lib.tex  class_maze.tex  class_maze_generator.tex  class_maze_gui.eps  class_maze_gui.tex  class_maze_solve_algorithm.eps  class_maze_solve_algorithm.tex  class_position.tex  class_recursive_maze_solve_algorithm.eps  class_recursive_maze_solve_algorithm.tex  dir_056ea06dd28d12bd8f6358c0671bfb80.tex  dir_07d1b3e9ec8ee28266699e84edec589b.tex  dir_1fa8660535a7ad54eb7f4040f8c8b6de.tex  dir_2f34abe2316b85e5a6c6831bb84bdce9.tex  dir_30e96c78cf793158ee2c4345770fc706.tex  dir_418f62d4c6a921a2fda9ed52e926db4b.tex  dir_7881a737c94b99294496df167cb4b872.tex  dir_7a1f0a4306c1d8febe4e12361667dcc4.tex  dir_7f925dee0079e047a065a095b3de6782.tex  dir_bfe439bcd7f3d1f8041cb68f9c142cbf.tex  files.tex  hierarchy.tex  main_8cpp.tex  maze_8cpp.tex  maze_8h.tex  mazealgorithm_8cpp.tex  mazealgorithm_8h.tex  (+7 more)
src/ss17/algodat/maze/: CMakeLists.txt  Main.cpp  breadth_first_search_main.cpp  main.cpp
src/ss17/algodat/maze/control/: CMakeLists.txt  breadth_first_search_main.cpp  mazealgorithm.cpp  mazealgorithm.h  mazegenerator.cpp  mazegenerator.h
src/ss17/algodat/maze/control/recursive_solver/: recursivemazesolvealgorithm.cpp  recursivemazesolvealgorithm.h
src/ss17/algodat/maze/control/shortest_path/breadth_first_search/: BreadthFirstSearch.cpp  BreadthFirstSearch.h  BreadthFirstSearchGuiInteraction.cpp  BreadthFirstSearchGuiInteraction.h  BreadthFirstSearchLib.cpp  BreadthFirstSearchLib.h  BreathFirstSearch.cpp  BreathFirstSearch.h  BreathFirstSearchLib.cpp  Position.cpp  Position.h
src/ss17/algodat/maze/model/: maze.cpp  maze.h
src/ss17/algodat/maze/shortest_path/breadth_first_search/: BreathFirstSearch.cpp  BreathFirstSearch.h  BreathFirstSearchLib.cpp  BreathFirstSearchLib.h
src/ss17/algodat/maze/tremaux/: Tremaux.cpp  Tremaux.h
src/ss17/algodat/maze/view/: mazegui.cpp  mazegui.h  mazegui.ui
test/ss17/algodat/maze/: CMakeLists.txt
test/ss17/algodat/maze/shortest_path/breadth_first_search/: BreadthFirstSearchTest.cpp  BreathFirstSearchLibTest.cpp  BreathFirstSearchTest.cpp  PositionTest.cpp
